# slashbot

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  Dockerfile  README.md  alembic.ini  bot-config.json  bot-config.toml  bot.py  bot_startup.sh  config-class.py  config.json  config.py  config_class.py  docker-compose.develop.yml  docker-compose.yml  entrypoint.sh  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
bot/: __init__.py  custom_bot.py  custom_cog.py  custom_command.py  error.py  messages.py  responses.py  types.py
bot/cogs/: admin.py  ai.py  image_generation.py  remind.py  reminders.py  scheduled_posts.py  spam.py  spelling.py  text_generation.py  tools.py  users.py  videos.py  weather.py
cogs/: admin.py  ai.py  content.py  info.py  music.py  remind.py  spam.py  users.py  videos.py  weather.py
data/: badwords.txt  posts.json  requirements.txt  scheduled_posts.json  scheduled_posts.yaml  slashbot.sqlite.db  uBlock.firefox.xpi  wikifeet.sqlite
data/chains/: train_chain.py
data/images/: convert-to-gif.sh
data/markov/: generate_sentences.py  markov-sentences.json
data/prompts/: _jamie.json  _random-response-prompt.json  _random-response.yaml  _summarise.yaml  _summary-prompt.json  be-nige.json  broken-english.json  broken-english.yaml  clyde.json  conspiracy.json  conspiracy.yaml  dan.json  dan_1.json  dan_2.json  default.yaml  disney.json  dominant.yaml  dommy-mommy.json  doth be useful.json  emo.json  farcical.yaml  fren.json  fuzzy-wuzzy-fren.json  fuzzy-wuzzy.json  fuzzy-wuzzy.yaml  girlfriend.yaml  goth.yaml  jailbreak.json  mean-girl.json  new-groove.json  old-english.json  postdog.json  postlemon.json  primary-teacher.json  prompt-apple-stan.json  prompt-bipolar-dom-sub.json  prompt-discord.json  prompt-dom-margs.json  prompt-done-with-you.json  prompt-girl.json  (+13 more)
data/random/: poopoo_stinky_baby.webm
data/text/: badwords.txt
data/videos/: friday.mov  weekend.mp4.peter
docker/: Dockerfile  entrypoint.sh  prepare-virtual-screen.sh
lib/: bot.py  cog.py  config.py  db.py  error.py  markov.py  models.py  typing.py  util.py
lib/botlib/: admin.py  config.py  custom_bot.py  custom_cog.py  custom_command.py  custom_types.py  db.py  error.py  image_generation.py  markov.py  messages.py  models.py  responses.py  text_generation.py  util.py  vision.py
lib/slashlib/: admin.py  config.py  db.py  error.py  image_generation.py  markov.py  models.py  text_generation.py  util.py  vision.py
markovify/: __init__.py  chain.py  splitters.py  text.py  utils.py
markovify/markovify/: chain.py  splitters.py  text.py  utils.py
migrations/: env.py
migrations/versions/: 10572a9c2c1c_change_column_name_from_letterboxd_user_.py  2a2239fa06a2_add_more_columns_to_watchedmovie_table.py  472df59a913a_add_default_values_for_nullable_columns.py  98809285e64c_add_user_letterboxd_user_and_.py  c0736c9f5911_add_backloggd_username_and_table.py  ed64f2ad3f10_fixing_typo_in_columns_of_watchedmovie_.py  ff80cf34a64d_add_user_letterboxd_user_and_.py
scripts/: generate_markov_bank.py  migrate_database.py  migrate_database_from_kv_to_sql.py  train_markov_chain.py  train_markov_train.py
slashbot/: __init__.py  admin.py  ai_conversation.py  bot.py  clock.py  cog.py  config.py  convertors.py  custom_bot.py  custom_cog.py  custom_command.py  database.py  db.py  error.py  errors.py  image_generation.py  logger.py  markov.py  messages.py  models.py  responses.py  run_slashbot.py  scraper.py  settings.py  settings_NEW.py  slashbot.py  text_generation.py  timezones.py  util.py  validation.py  vision.py  watchers.py
slashbot/ai/: chat.py  models.py  text_generator.py
slashbot/ai/clients/: abstract_client.py  gemini_client.py  openai_client.py
slashbot/bot/: custom_bot.py  custom_cog.py  custom_command.py
slashbot/classes/: channel_summary.py  conversation.py  text_generator.py
slashbot/cli/: run.py
slashbot/cogs/: __init__.py  admin.py  ai.py  ai_chat.py  ai_images.py  archive.py  artificial_intelligence.py  backloggd.py  bully.py  chat.py  chatbot.py  content.py  image.py  image_generation.py  info.py  letterboxd.py  markov.py  movie_tracker.py  remind.py  reminders.py  schedule.py  scheduled_posts.py  spam.py  spelling.py  text_generation.py  tools.py  users.py  videos.py  weather.py  wikifeet.py
slashbot/core/: ai_chat.py  ai_chat_summary.py  aichat.py  aichat_summary.py  channel_summary.py  conversation.py  custom_bot.py  custom_cog.py  custom_command.py  database.py  database_async.py  logger.py  markov.py  text_generator.py
slashbot/core/ai/: __init__.py  chat.py  summary.py  text_generator.py
slashbot/core/database/: __init__.py  base_sql.py  database_async.py  error.py  kv.py  kv_database.py  kv_models.py  models.py  sql.py  sql_database.py  sql_models.py  wikifeet.py  wikifeet_database.py
slashbot/core/database_NEW/: database_async.py  models.py
slashbot/core/text/: abstract.py  my_openai.py  text_generator.py
slashbot/core/text_generation/: __init__.py  logger.py  markov.py  models.py  prompts.py  text_generator.py
slashbot/database/: base_sql.py  sql_database.py  sql_models.py
slashbot/discord/: __init__.py  custom_cog.py  custom_command.py  messages.py  responses.py
slashbot/discord/cogs/: admin.py  image_generation.py  (+9 more)
slashbot/helpers/: messages.py  responses.py  util.py
slashbot/lib/: admin.py  custom_bot.py  custom_cog.py  custom_command.py  db.py  error.py  image_generation.py  logger.py  markov.py  messages.py  models.py  responses.py  text_generation.py  text_generation_NEW.py  text_generation_OLD.py  util.py  vision.py
slashbot/markovify/: chain.py  splitters.py  text.py
slashbot/models/: ai_channel_summary.py  ai_conversation.py  bad_words.py  bank.py  conversation_OLD.py  oracle_words.py  reminders.py  text_generators.py  users.py
slashbot/old_cogs/: archive.py  content.py
src/slashbot/: convertors.py  errors.py  markov.py  messages.py  scraper.py  settings.py  watchers.py
tests/: conftest.py  test_admin.py  test_database.py  test_markov.py  wolfram.py
(+68 files in other folders)
