[tool.poetry]
name = "slashbot"
version = "2.4.0"
description = "A (useless) discord bot designed around slash commands."
authors = ["Edward J. Parkinson"]
readme = "README.md"
packages = [
    { include = "slashbot" },
    { include = "botlib", from = "lib" },
    { include = "markovify", from = "lib" }
]

[tool.poetry.scripts]
slashbot = "slashbot.slashbot:main"

[tool.poetry.dependencies]
python = "^3.11"
unidecode = "1.3.6"
prettytable = "3.6.0"
rule34 = "1.8.1"
wolframalpha = "5.0.0"
disnake = "2.8.1"
pyowm = "3.3.0"
requests = "2.28.1"
dateparser = "^1.1.8"
tiktoken = "0.7.0"
watchdog = "^3.0.0"
geopy = "^2.3.0"
pyspellchecker = "^0.7.2"
async-timeout = "^4.0.3"
httpx = "^0.27.0"
openai = "1.61.0"
aiofiles = "^23.2.1"
defusedxml = "^0.7.1"
pyinstrument = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
pre-commit = "^3.3.3"
isort = "^5.12.0"
ruff = "^0.9.9"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[tool.isort]
profile = "ruff"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "ANN101", "COM812", "S311", "S101", "D100"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [".", "lib", "lib/markovify", "lib/slashlib"]
