[project]
name = "slashbot"
version = "2.10.0"
description = "A (useless) discord bot designed around slash commands."
authors = [{ name = "Edward J. Parkinson" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "unidecode==1.3.6",
    "prettytable==3.6.0",
    "rule34==1.8.1",
    "wolframalpha==5.0.0",
    "disnake==2.11.0",
    "pyowm==3.3.0",
    "dateparser>=1.1.8,<2",
    "tiktoken==0.12.0",
    "watchdog>=3.0.0,<4",
    "geopy>=2.3.0,<3",
    "pyspellchecker>=0.7.2,<0.8",
    "httpx>=0.28.1,<0.29",
    "openai==1.61.0",
    "aiofiles>=23.2.1,<24",
    "defusedxml>=0.7.1,<0.8",
    "pyinstrument>=5.0.0,<6",
    "gitpython>=3.1.44,<4",
    "markovify",
    "pydantic>=2.11.3,<3",
    "sqlalchemy>=2.0.41,<3",
    "aiosqlite>=0.21.0,<0.22",
    "selenium>=4.34.2,<5",
    "greenlet>=3.2.3,<4",
    "nameparser>=1.1.3,<2",
    "ddgs>=9.5.4,<10",
    "feedparser>=6.0.12,<7",
    "alembic>=1.16.5,<2",
    "rule34-posts-wrapper>=0.1.1.1,<0.2",
    "pytest-asyncio>=1.2.0,<2",
    "ruff>=0.9.10",
]

[project.scripts]
slashbot = "slashbot.cli.run:entry_point"

[dependency-groups]
dev = [
    "ipython>=8.13.2,<9",
    "pre-commit>=3.3.3,<4",
    "isort>=5.12.0,<6",
    "ruff>=0.9.9,<0.10",
    "pytest>=8.2.2,<9",
    "pytest-asyncio==1.2.0",
]

[tool.uv]
package = true

[tool.uv.sources]
markovify = { git = "https://github.com/saultyevil/markovify.git" }

[tool.uv.build-backend]
module-name = ["slashbot"]
module-root = "src"

[tool.isort]
profile = "ruff"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",
    "ANN101",
    "COM812",
    "S311",
    "S101",
    "D100",
    "ANN401",
    "PGH003",
    "RET504",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
